--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-16 15:28+0100\n"
+"POT-Creation-Date: 2024-12-17 21:11+0100\n"
 "PO-Revision-Date: 2024-12-12 19:35+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,19 +19,71 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Translated-Using: django-rosetta 0.10.1\n"
 
-#: my_portfolio/settings.py:126
+#: blog/templates/blog/detail.html:28
+msgid "Leave your comment here"
+msgstr "Оставьте свой комментарий здесь"
+
+#: blog/templates/blog/detail.html:36
+msgid "Your name"
+msgstr "Ваше имя"
+
+#: blog/templates/blog/detail.html:40
+msgid "Your review"
+msgstr "Ваш отзыв"
+
+#: blog/templates/blog/detail.html:46
+msgid "Submit"
+msgstr "Отправить"
+
+#: blog/templates/blog/modal_suggest.html:12
+msgid "Suggest news"
+msgstr "Nachricht vorschlagen"
+
+#: blog/templates/blog/modal_suggest.html:19
+msgid "Title"
+msgstr "Titel"
+
+#: blog/templates/blog/modal_suggest.html:22
+msgid "Description"
+msgstr "Beschreibung"
+
+#: blog/templates/blog/modal_suggest.html:25
+msgid "Link to article (source)"
+msgstr "Link zum Artikel (Quelle)"
+
+#: blog/templates/blog/posts.html:11 portfolio/templates/portfolio/base.html:66
+msgid "Say Hello"
+msgstr "Sag Hallo"
+
+#: blog/templates/blog/posts.html:30
+msgid "Articles"
+msgstr "Artikel"
+
+#: blog/templates/blog/posts.html:33
+msgid "Sometimes I will add interesting information here."
+msgstr "Manchmal werde ich hier interessante Informationen hinzufügen."
+
+#: blog/templates/blog/posts.html:97
+msgid ""
+"I enjoy receiving messages from you. If you have any suggestions, I'll be "
+"here."
+msgstr ""
+"Ich freue mich über Ihre Nachrichten. Wenn Sie Vorschläge haben, bin ich "
+"hier."
+
+#: my_portfolio/settings.py:119
 msgid "German"
 msgstr "Deutsch"
 
-#: my_portfolio/settings.py:127
+#: my_portfolio/settings.py:120
 msgid "English"
 msgstr "Englisch"
 
-#: my_portfolio/settings.py:128
+#: my_portfolio/settings.py:121
 msgid "Українська"
 msgstr "Ukrainisch"
 
-#: my_portfolio/settings.py:129
+#: my_portfolio/settings.py:122
 msgid "Russian"
 msgstr "Russisch"
 
@@ -58,10 +110,6 @@ msgstr "Über mich"
 #: portfolio/templates/portfolio/base.html:63
 msgid "Works"
 msgstr "Projekte"
-
-#: portfolio/templates/portfolio/base.html:66
-msgid "Say Hello"
-msgstr "Sag Hallo"
 
 #: portfolio/templates/portfolio/base.html:69
 msgid "Blog"
@@ -246,34 +294,25 @@ msgstr "Hier sind einige meiner Projekte. Schau sie dir gerne an!"
 msgid "What I used: "
 msgstr "Was ich verwendet habe: "
 
-#: portfolio/templates/portfolio/base.html:324
+#: portfolio/templates/portfolio/includes/footer.html:8
 msgid "Get In Touch"
 msgstr "Kontakt aufnehmen"
 
-#: portfolio/templates/portfolio/base.html:328
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "                            I love to hear from you. Whether you have a "
-#| "question or just want to chat.\n"
-#| "                            "
-msgid ""
-"\n"
-"                            If you need a website or want to hire me, feel "
-"free to reach out!\n"
-"                            "
-msgstr ""
-"\n"
-"Wenn Sie eine Website brauchen oder mich einstellen möchten, schreiben Sie "
-"mir gern!"
+#: portfolio/templates/portfolio/includes/footer.html:12
+msgid "If you need a website or want to hire me, feel free to reach out!"
+msgstr "Wenn Sie eine Website brauchen oder mich einstellen möchten, schreiben Sie mir gern!"
 
-#: portfolio/templates/portfolio/base.html:338
+#: portfolio/templates/portfolio/includes/footer.html:20
 msgid "Reach me at"
 msgstr "Erreichen Sie mich unter"
 
-#: portfolio/templates/portfolio/base.html:360
+#: portfolio/templates/portfolio/includes/footer.html:28
+msgid "Social"
+msgstr "Soziale Netzwerke"
+
+#: portfolio/templates/portfolio/includes/footer.html:43
 msgid "Site Language"
 msgstr "Seitensprache"
 
-#~ msgid "description"
-#~ msgstr "beschreibung"
+#~ msgid "Read"
+#~ msgstr "Lesen"
