--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-16 15:34+0100\n"
+"POT-Creation-Date: 2024-12-17 21:08+0100\n"
 "PO-Revision-Date: 2024-12-12 19:28+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,19 +21,70 @@ msgstr ""
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Translated-Using: django-rosetta 0.10.1\n"
 
-#: my_portfolio/settings.py:126
+#: blog/templates/blog/detail.html:28
+msgid "Leave your comment here"
+msgstr "Оставьте свой комментарий здесь"
+
+#: blog/templates/blog/detail.html:36
+msgid "Your name"
+msgstr "Ваше имя"
+
+#: blog/templates/blog/detail.html:40
+msgid "Your review"
+msgstr "Ваш отзыв"
+
+#: blog/templates/blog/detail.html:46
+msgid "Submit"
+msgstr "Отправить"
+
+#: blog/templates/blog/modal_suggest.html:12
+msgid "Suggest news"
+msgstr "Предложить новость"
+
+#: blog/templates/blog/modal_suggest.html:19
+msgid "Title"
+msgstr "Заголовок"
+
+#: blog/templates/blog/modal_suggest.html:22
+msgid "Description"
+msgstr "Описание"
+
+#: blog/templates/blog/modal_suggest.html:25
+msgid "Link to article (source)"
+msgstr "Ссылка на статью (источник)"
+
+#: blog/templates/blog/posts.html:11 portfolio/templates/portfolio/base.html:66
+msgid "Say Hello"
+msgstr "Связаться"
+
+#: blog/templates/blog/posts.html:30
+msgid "Articles"
+msgstr "Статьи"
+
+#: blog/templates/blog/posts.html:33
+msgid "Sometimes I will add interesting information here."
+msgstr "Иногда я буду добавлять здесь интересную информацию."
+
+#: blog/templates/blog/posts.html:97
+msgid ""
+"I enjoy receiving messages from you. If you have any suggestions, I'll be "
+"here."
+msgstr ""
+"Мне приятно получать ваши сообщения. Если у вас есть предложения, я здесь."
+
+#: my_portfolio/settings.py:119
 msgid "German"
 msgstr "Немецкий"
 
-#: my_portfolio/settings.py:127
+#: my_portfolio/settings.py:120
 msgid "English"
 msgstr "Английский"
 
-#: my_portfolio/settings.py:128
+#: my_portfolio/settings.py:121
 msgid "Українська"
 msgstr "Украинский"
 
-#: my_portfolio/settings.py:129
+#: my_portfolio/settings.py:122
 msgid "Russian"
 msgstr "Русский"
 
@@ -60,10 +111,6 @@ msgstr "Обо мне"
 #: portfolio/templates/portfolio/base.html:63
 msgid "Works"
 msgstr "Работы"
-
-#: portfolio/templates/portfolio/base.html:66
-msgid "Say Hello"
-msgstr "Связаться"
 
 #: portfolio/templates/portfolio/base.html:69
 msgid "Blog"
@@ -260,26 +307,26 @@ msgstr "Вот некоторые из моих проектов."
 msgid "What I used: "
 msgstr "Что я использовал: "
 
-#: portfolio/templates/portfolio/base.html:324
+#: portfolio/templates/portfolio/includes/footer.html:8
 msgid "Get In Touch"
 msgstr "Свяжитесь со мной"
 
-#: portfolio/templates/portfolio/base.html:328
-msgid ""
-"\n"
-"                            If you need a website or want to hire me, feel "
-"free to reach out!\n"
-"                            "
-msgstr ""
-"\n"
-"                            Если вам нужен сайт или вы хотите нанять меня, пишите мне!\n"
-"                            "
+#: portfolio/templates/portfolio/includes/footer.html:12
 
+msgid "If you need a website or want to hire me, feel free to reach out!"
+msgstr "Если вам нужен сайт или вы хотите нанять меня, пишите мне!"
 
-#: portfolio/templates/portfolio/base.html:338
+#: portfolio/templates/portfolio/includes/footer.html:20
 msgid "Reach me at"
-msgstr "Напишите мне на"
+msgstr "Напишите мне"
 
-#: portfolio/templates/portfolio/base.html:360
+#: portfolio/templates/portfolio/includes/footer.html:28
+msgid "Social"
+msgstr "Социальные сети"
+
+#: portfolio/templates/portfolio/includes/footer.html:43
 msgid "Site Language"
 msgstr "Язык сайта"
+
+#~ msgid "Read"
+#~ msgstr "Читать"
