--- a/locale/uk/LC_MESSAGES/django.po
+++ b/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-19 17:10+0100\n"
+"POT-Creation-Date: 2024-12-26 22:00+0000\n"
 "PO-Revision-Date: 2024-12-12 20:17+0000\n"
 "Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -60,7 +60,7 @@ msgid "Title"
 msgstr "Заголовок"
 
 #: blog/templates/blog/modal_suggest.html:22
-#: portfolio/templates/portfolio/base.html:301
+#: portfolio/templates/portfolio/index.html:256
 msgid "Description"
 msgstr "Опис"
 
@@ -68,12 +68,12 @@ msgstr "Опис"
 msgid "Link to article (source)"
 msgstr "Посилання на статтю (джерело)"
 
-#: blog/templates/blog/posts.html:8 portfolio/templates/portfolio/base.html:48
+#: blog/templates/blog/posts.html:8 portfolio/templates/portfolio/index.html:7
 msgid "Hello"
 msgstr "Привіт"
 
 #: blog/templates/blog/posts.html:9 blog/templates/blog/posts.html:21
-#: portfolio/templates/portfolio/base.html:57
+#: portfolio/templates/portfolio/index.html:16
 msgid "Intro"
 msgstr "Головна"
 
@@ -86,7 +86,7 @@ msgid "Order by views"
 msgstr "Сортувати за переглядами"
 
 #: blog/templates/blog/posts.html:16 blog/templates/blog/posts.html:29
-#: portfolio/templates/portfolio/base.html:66
+#: portfolio/templates/portfolio/index.html:25
 msgid "Say Hello"
 msgstr "Зв’язатися"
 
@@ -109,122 +109,184 @@ msgid ""
 msgstr ""
 "Мені приємно отримувати від вас повідомлення. Якщо у вас є пропозиції, я тут."
 
-#: my_portfolio/settings.py:120
+#: my_portfolio/settings.py:121
 msgid "German"
 msgstr "Німецька"
 
-#: my_portfolio/settings.py:121
+#: my_portfolio/settings.py:122
 msgid "English"
 msgstr "Англійська"
 
-#: my_portfolio/settings.py:122
+#: my_portfolio/settings.py:123
 msgid "Українська"
 msgstr "Українська"
 
-#: my_portfolio/settings.py:123
+#: my_portfolio/settings.py:124
 msgid "Russian"
 msgstr "Російська"
 
-#: portfolio/templates/portfolio/base.html:11
+#: my_portfolio/templates/404.html:8
+msgid "Page Not Found"
+msgstr "Сторінка не знайдена"
+
+#: my_portfolio/templates/404.html:9
+msgid ""
+"Sorry, the page you are looking for does not exist. It may have been moved "
+"or deleted"
+msgstr ""
+"Вибачте, сторінка, яку ви шукаєте, не існує. Можливо, вона була переміщена "
+"або видалена"
+
+#: my_portfolio/templates/404.html:10
+msgid "Go to Homepage"
+msgstr "На Головну"
+
+#: my_portfolio/templates/500.html:8
+msgid "Internal Server Error"
+msgstr "Помилка сервера"
+
+#: my_portfolio/templates/500.html:9
+msgid "Oops! Something went wrong on our end. We're working to fix it."
+msgstr "Ой! Щось пішло не так на нашому сервері. Ми працюємо над виправленням"
+
+#: my_portfolio/templates/base.html:11
 msgid "Welcome"
 msgstr "Ласкаво просимо"
 
-#: portfolio/templates/portfolio/base.html:49
+#: my_portfolio/templates/includes/footer.html:8
+msgid "Get In Touch"
+msgstr "Зв’яжіться зі мною"
+
+#: my_portfolio/templates/includes/footer.html:12
+msgid "If you need a website or want to hire me, feel free to reach out!"
+msgstr ""
+"Потрібен сайт? Звертайтеся! Бажаєте просто поспілкуватися? Пишіть, буду "
+"радий!"
+
+#: my_portfolio/templates/includes/footer.html:20
+msgid "Reach me at"
+msgstr "Напишіть мені"
+
+#: my_portfolio/templates/includes/footer.html:28
+msgid "Social"
+msgstr "Соціальні мережі"
+
+#: my_portfolio/templates/includes/footer.html:37
+msgid "SayHello"
+msgstr "Зв’язатися"
+
+#: my_portfolio/templates/includes/footer.html:44
+msgid "Site Language"
+msgstr "Мова сайту"
+
+#: portfolio/templates/portfolio/index.html:8
 msgid "Menu"
 msgstr "Меню"
 
-#: portfolio/templates/portfolio/base.html:60
+#: portfolio/templates/portfolio/index.html:19
 msgid "About"
 msgstr "Про мене"
 
-#: portfolio/templates/portfolio/base.html:63
+#: portfolio/templates/portfolio/index.html:22
 msgid "Works"
 msgstr "Роботи"
 
-#: portfolio/templates/portfolio/base.html:69
+#: portfolio/templates/portfolio/index.html:28
 msgid "Blog"
 msgstr "Блог"
 
-#: portfolio/templates/portfolio/base.html:91
+#: portfolio/templates/portfolio/index.html:46
 msgid "I'm Backend Developer"
 msgstr "Я бекенд-розробник"
 
-#: portfolio/templates/portfolio/base.html:94
+#: portfolio/templates/portfolio/index.html:49
 msgid "Daniil Tkachenko"
 msgstr "Данiïл Ткаченко"
 
-#: portfolio/templates/portfolio/base.html:96
+#: portfolio/templates/portfolio/index.html:51
 msgid "Why me"
 msgstr "Чому я"
 
-#: portfolio/templates/portfolio/base.html:98
+#: portfolio/templates/portfolio/index.html:53
 msgid "Expertise in Django Framework"
 msgstr "Експертиза у фреймворку Django"
 
-#: portfolio/templates/portfolio/base.html:99
+#: portfolio/templates/portfolio/index.html:54
 msgid "Experience in developing complex systems"
 msgstr "Досвід розробки складних систем"
 
-#: portfolio/templates/portfolio/base.html:100
+#: portfolio/templates/portfolio/index.html:55
 msgid "Ability to optimize and scale"
 msgstr "Вміння оптимізувати та масштабувати"
 
-#: portfolio/templates/portfolio/base.html:101
+#: portfolio/templates/portfolio/index.html:56
 msgid "Expertise in Python"
 msgstr "Експертиза в Python"
 
-#: portfolio/templates/portfolio/base.html:106
+#: portfolio/templates/portfolio/index.html:61
 msgid "Integration and Interoperability"
 msgstr "Інтеграція та сумісність"
 
-#: portfolio/templates/portfolio/base.html:107
+#: portfolio/templates/portfolio/index.html:62
 msgid "Collaborative Team Player"
 msgstr "Командний гравець"
 
-#: portfolio/templates/portfolio/base.html:108
+#: portfolio/templates/portfolio/index.html:63
 msgid "Continuous Learning and Adaptability"
 msgstr "Безперервне навчання та адаптивність"
 
-#: portfolio/templates/portfolio/base.html:109
+#: portfolio/templates/portfolio/index.html:64
 msgid "Results-oriented approach"
 msgstr "Орієнтація на результат"
 
-#: portfolio/templates/portfolio/base.html:113
+#: portfolio/templates/portfolio/index.html:68
 msgid "Hire me"
 msgstr "Найміть мене."
 
-#: portfolio/templates/portfolio/base.html:117
+#: portfolio/templates/portfolio/index.html:72
 msgid "My CV"
 msgstr "Моє резюме."
 
-#: portfolio/templates/portfolio/base.html:138
+#: portfolio/templates/portfolio/index.html:93
 msgid "about"
 msgstr "Про мене"
 
-#: portfolio/templates/portfolio/base.html:141
+#: portfolio/templates/portfolio/index.html:96
 msgid "Knowledge"
 msgstr "Знання"
 
-#: portfolio/templates/portfolio/base.html:153
+#: portfolio/templates/portfolio/index.html:108
 msgid "Experience"
 msgstr "Досвід"
 
-#: portfolio/templates/portfolio/base.html:164
+#: portfolio/templates/portfolio/index.html:119
 msgid "August 2020 - January 2022"
 msgstr "Серпень 2020 - Січень 2022"
 
-#: portfolio/templates/portfolio/base.html:170
+#: portfolio/templates/portfolio/index.html:125
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                                        For a year, I worked as a backend "
+#| "developer, creating websites using Django, and\n"
+#| "                                        utilizing Celery and Redis for "
+#| "task management and caching. My responsibilities\n"
+#| "                                        included developing and "
+#| "integrating APIs, connecting and managing databases, and\n"
+#| "                                        ensuring efficient and robust web "
+#| "application performance.\n"
+#| "                                        "
 msgid ""
 "\n"
-"                                        For a year, I worked as a backend "
-"developer, creating websites using Django, and\n"
-"                                        utilizing Celery and Redis for task "
+"                                For a year, I worked as a backend developer, "
+"creating websites using Django, and\n"
+"                                utilizing Celery and Redis for task "
 "management and caching. My responsibilities\n"
-"                                        included developing and integrating "
-"APIs, connecting and managing databases, and\n"
-"                                        ensuring efficient and robust web "
+"                                included developing and integrating APIs, "
+"connecting and managing databases, and\n"
+"                                ensuring efficient and robust web "
 "application performance.\n"
-"                                        "
+"                                "
 msgstr ""
 "\n"
 "                                        Протягом року я працював бекенд-"
@@ -237,37 +299,52 @@ msgstr ""
 "надійної роботи веб-застосунків.\n"
 "                                        "
 
-#: portfolio/templates/portfolio/base.html:186
+#: portfolio/templates/portfolio/index.html:141
 msgid "Education"
 msgstr "Освіта"
 
-#: portfolio/templates/portfolio/base.html:194
+#: portfolio/templates/portfolio/index.html:149
 msgid "KHARKIV NATIONAL UNIVERSITY OF RADIO ELECTRONICS"
 msgstr "ХАРКІВСЬКИЙ НАЦІОНАЛЬНИЙ УНІВЕРСИТЕТ РАДІОЕЛЕКТРОНІКИ"
 
-#: portfolio/templates/portfolio/base.html:197
+#: portfolio/templates/portfolio/index.html:152
 msgid "CyberSecurity"
 msgstr "Кібербезпека"
 
-#: portfolio/templates/portfolio/base.html:200
+#: portfolio/templates/portfolio/index.html:155
 msgid "April 2016 - June 2020"
 msgstr "Квітень 2016 - Червень 2020"
 
-#: portfolio/templates/portfolio/base.html:205
+#: portfolio/templates/portfolio/index.html:160
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                                        Cybersecurity is a set of tools, "
+#| "strategies, security principles, security\n"
+#| "                                        assurances, risk management "
+#| "approaches, actions, training, insurance and\n"
+#| "                                        technologies used to protect "
+#| "cyber media, resources of organizations and users.\n"
+#| "                                        Cybersecurity provides for the "
+#| "achievement and conservation of security features\n"
+#| "                                        of the resources of the "
+#| "organization or users directed against the corresponding\n"
+#| "                                        cyber threats.\n"
+#| "                                        "
 msgid ""
 "\n"
-"                                        Cybersecurity is a set of tools, "
-"strategies, security principles, security\n"
-"                                        assurances, risk management "
-"approaches, actions, training, insurance and\n"
-"                                        technologies used to protect cyber "
-"media, resources of organizations and users.\n"
-"                                        Cybersecurity provides for the "
-"achievement and conservation of security features\n"
-"                                        of the resources of the organization "
-"or users directed against the corresponding\n"
-"                                        cyber threats.\n"
-"                                        "
+"                                Cybersecurity is a set of tools, strategies, "
+"security principles, security\n"
+"                                assurances, risk management approaches, "
+"actions, training, insurance and\n"
+"                                technologies used to protect cyber media, "
+"resources of organizations and users.\n"
+"                                Cybersecurity provides for the achievement "
+"and conservation of security features\n"
+"                                of the resources of the organization or "
+"users directed against the corresponding\n"
+"                                cyber threats.\n"
+"                                "
 msgstr ""
 "\n"
 "                                        Кібербезпека — це набір "
@@ -282,34 +359,50 @@ msgstr ""
 "кіберзагроз.\n"
 "                                        "
 
-#: portfolio/templates/portfolio/base.html:221
+#: portfolio/templates/portfolio/index.html:176
 msgid "Kyiv National Economic University Romny college"
 msgstr "Роменський коледж Київського національного економічного університету"
 
-#: portfolio/templates/portfolio/base.html:224
+#: portfolio/templates/portfolio/index.html:179
 msgid "System Administrator"
 msgstr "Системний адміністратор"
 
-#: portfolio/templates/portfolio/base.html:227
+#: portfolio/templates/portfolio/index.html:182
 msgid "August 2012 - June 2016"
 msgstr "Серпень 2012 - Червень 2016"
 
-#: portfolio/templates/portfolio/base.html:232
+#: portfolio/templates/portfolio/index.html:187
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                                        I studied at Romensky College of "
+#| "Kyiv National Economic University (KNEU) for 4\n"
+#| "                                        years, specializing in System "
+#| "Administration. During my time there, I gained\n"
+#| "                                        in-depth knowledge and skills in "
+#| "managing and maintaining information systems,\n"
+#| "                                        configuring servers, handling "
+#| "network devices, ensuring system security, and\n"
+#| "                                        providing technical support to "
+#| "users. This comprehensive education has equipped\n"
+#| "                                        me with the expertise needed to "
+#| "excel in the field of System Administration.\n"
+#| "                                        "
 msgid ""
 "\n"
-"                                        I studied at Romensky College of "
-"Kyiv National Economic University (KNEU) for 4\n"
-"                                        years, specializing in System "
+"                                I studied at Romensky College of Kyiv "
+"National Economic University (KNEU) for 4\n"
+"                                years, specializing in System "
 "Administration. During my time there, I gained\n"
-"                                        in-depth knowledge and skills in "
-"managing and maintaining information systems,\n"
-"                                        configuring servers, handling "
-"network devices, ensuring system security, and\n"
-"                                        providing technical support to "
-"users. This comprehensive education has equipped\n"
-"                                        me with the expertise needed to "
-"excel in the field of System Administration.\n"
-"                                        "
+"                                in-depth knowledge and skills in managing "
+"and maintaining information systems,\n"
+"                                configuring servers, handling network "
+"devices, ensuring system security, and\n"
+"                                providing technical support to users. This "
+"comprehensive education has equipped\n"
+"                                me with the expertise needed to excel in the "
+"field of System Administration.\n"
+"                                "
 msgstr ""
 "\n"
 "                                        Кібербезпека — це набір "
@@ -324,40 +417,14 @@ msgstr ""
 "кіберзагроз.\n"
 "                                        "
 
-#: portfolio/templates/portfolio/base.html:257
+#: portfolio/templates/portfolio/index.html:212
 msgid "Recent Works"
 msgstr "Останні роботи"
 
-#: portfolio/templates/portfolio/base.html:261
+#: portfolio/templates/portfolio/index.html:216
 msgid "Here are some of my projects. Feel free to check them out."
 msgstr "Ось деякі з моїх проєктів. Ознайомтесь із ними."
 
-#: portfolio/templates/portfolio/base.html:302
+#: portfolio/templates/portfolio/index.html:257
 msgid "What tools I used"
 msgstr "Якi iнструменти я використовував"
-
-#: portfolio/templates/portfolio/includes/footer.html:8
-msgid "Get In Touch"
-msgstr "Зв’яжіться зі мною"
-
-#: portfolio/templates/portfolio/includes/footer.html:12
-msgid "If you need a website or want to hire me, feel free to reach out!"
-msgstr ""
-"Потрібен сайт? Звертайтеся! Бажаєте просто поспілкуватися? Пишіть, буду "
-"радий!"
-
-#: portfolio/templates/portfolio/includes/footer.html:20
-msgid "Reach me at"
-msgstr "Напишіть мені"
-
-#: portfolio/templates/portfolio/includes/footer.html:28
-msgid "Social"
-msgstr "Соціальні мережі"
-
-#: portfolio/templates/portfolio/includes/footer.html:37
-msgid "SayHello"
-msgstr "Зв’язатися"
-
-#: portfolio/templates/portfolio/includes/footer.html:44
-msgid "Site Language"
-msgstr "Мова сайту"
